# groundcover

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
helm/webhook/: Chart.yaml  values.yaml
helm/webhook/ci/: lint-values.yaml
helm/webhook/templates/: _helpers.tpl  deployment.yaml  horizontalpodautoscaler.yaml  mutatingwebhookconfiguration.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  prometheusrule.yaml  secret-tls.yaml  service.yaml  serviceaccount.yaml
src/webhook/: config.py
src/webhook/adapters/api/: health.py  metrics.py  middleware.py  webhook.py
src/webhook/adapters/metrics/: recorder.py
src/webhook/adapters/mutations/: base.py  registry_instance.py
src/webhook/adapters/mutations/labels/: deployment_labels.py  service_labels.py
src/webhook/application/services/: admission_service.py
src/webhook/bootstrap/: app_factory.py  inject.py
src/webhook/domain/: exceptions.py  types.py
src/webhook/domain/models/: admission.py  patch.py
src/webhook/infrastructure/: logging.py
src/webhook/ports/: mutator.py  registry.py
tests/: conftest.py
tests/integration/: test_webhook.py
tests/unit/mutations/: test_deployment_labels.py  test_service_labels.py
